<resources>
    <string name="adr_loc">Address or location</string>
    <string name="app_name">There Yet Millage ZR</string>
    <string name="couldnotfind">Unable to locate address</string>
    <string name="denied">"Permission Denied. Distance finding will not work!"</string>
    <string name="dummy">Dummy</string>
    <string name="exception">Failed to communicate with geolocation services</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="new_loc">New Location</string>
    <string name="new_button">New</string>
    <string name="provider">Provider:</string>
    <string name="mclaury">McLaury</string>
    <string name="grubby">Grubby</string>
    <string name="home">Home</string>
</resources>